# theater-codenames

./: .gitignore  .nvim.lua  Dockerfile  pyproject.toml  readme.md  requirements.txt
app/: .sesskey  main.py  make_app.py  manage.py
app/cards/: compsci.txt
app/models/: config.py  errors.py  game.py
app/pages/: __init__.py  components.py  home.py  play.py
