[project]
name = "example"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.9.0",
    "apsw==3.50.3.0",
    "apswutils==0.1.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.7.14",
    "click==8.2.1",
    "fastcore==1.8.7",
    "fastlite==0.2.1",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-fasthtml==0.12.22",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.42",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]

[tool.ruff]
line-length = 100

[tool.pyright]
reportWildcardImportFromLibrary = "none"
reportCallIssue = "none"

